# WordsCounter

./: CMakeLists.txt  main.cpp
